# plt

./: .gitignore  CMakeLists.txt  README.md  README.md.backup
src/: TMeffect.txt  ai.dia  constants.hpp  engine.dia  modifs.txt  render.dia  state.dia  state.dia.autosave
src/client/: CMakeLists.txt  main.cpp
src/client/client/: Exemple.cpp  test.cpp
src/client/render/: BadgeScene.cpp  BaseScene.cpp  BoardDisplay.cpp  BoardScene.cpp  Button.cpp  CardScene.cpp  ClickableArea.cpp  EngineAPI.cpp  EventHandler.cpp  GlobalParametersDisplay.cpp  Image.cpp  MainScene.cpp  MenuDisplay.cpp  OptionScene.cpp  PayScene.cpp  PlaceTileScene.cpp  PlayerScore.cpp  PlayerScoreDisplay.cpp  Popup.cpp  PopupBadge.cpp  PopupCard.cpp  PopupPay.cpp  Scene.cpp  SceneManager.cpp  SharedContext.cpp  StdProjectDisplay.cpp  Text.cpp  TexturePool.cpp  Textured.cpp  TitleScene.cpp  UiComponent.cpp
src/resources/: board_description.json  cards_description.json
src/shared/: CMakeLists.txt  main.cpp
src/shared/ai/: AI.cpp  AdvancedAI.cpp  BasicAI.cpp  HeuristicAI.cpp
src/shared/engine/: BadgePlayedListener.cpp  CardPlayedEvent.cpp  CardReader.cpp  DrawCardReaction.cpp  Event.cpp  EventDetails.cpp  EventManager.cpp  EventType.cpp  IncreaseGPReaction.cpp  Listener.cpp  ModifyResourceReaction.cpp  PlaceTileReaction.cpp  Reaction.cpp  ReactionQueue.cpp  StateEventDetails.cpp  TilePlacedEvent.cpp  TilePlacedListener.cpp
src/shared/state/: AdjacentTo.cpp  Badge.cpp  Board.cpp  Card.cpp  CardBoard.cpp  CardsHand.cpp  Company.cpp  CounterPV.cpp  Deck.cpp  Eactif.cpp  Epassif.cpp  EventSender.cpp  Gain.cpp  GlobalParameters.cpp  HandObserver.cpp  Observable.cpp  OnOcean.cpp  OnReserved.cpp  OnRessource.cpp  ParameterObserver.cpp  PlaceCondition.cpp  Player.cpp  ProjectCard.cpp  ProjectStd.cpp  RenderAPI.cpp  ResourceBoard.cpp  Ressource.cpp  RessourceObserver.cpp  RessourceSPE.cpp  RessourceSTD.cpp  Ressources.cpp  Spot.cpp  State.cpp  Tile.cpp  TileObserver.cpp  UiDataProvider.cpp
test/shared/: test_shared_GlobalParameters.cpp  test_shared_dummy.cpp
